--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProductDetailActivity">
+    tools:context=".activities.ProductDetailActivity"
+    >
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -30,7 +31,8 @@
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/pager"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                 />
 
             <LinearLayout
                 android:id="@+id/layout_dots"
@@ -117,7 +119,7 @@
                     android:layout_marginStart="8dp"
                     android:layout_marginLeft="8dp"
                     android:gravity="right"
-                    android:text="You Save 20%"
+                    android:text="You Save: 20%"
                     android:textColor="@color/green_A700"
                     app:layout_constraintBottom_toBottomOf="@+id/textView12"
                     app:layout_constraintEnd_toEndOf="@+id/textView10"
@@ -128,7 +130,7 @@
                     android:id="@+id/textView12"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Delivery Free"
+                    android:text="Standard:Friday Evening"
                     app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
                     app:layout_constraintEnd_toStartOf="@+id/textView11"
                     app:layout_constraintHorizontal_bias="0.5"
@@ -160,16 +162,18 @@
                     app:layout_constraintEnd_toStartOf="@+id/textView12"
                     app:layout_constraintStart_toStartOf="parent" />
 
-                <androidx.appcompat.widget.AppCompatImageView
+                <com.google.android.material.button.MaterialButton
                     android:id="@+id/materialButton3"
-                    style="@style/BtnAddStyle"
+                    style="@style/FavouriteButtonStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:src="@drawable/ic_add_shopping_cart_black_24dp"
+                    app:icon="@drawable/ic_favorite_border_black_24dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/button2"
-                    app:layout_constraintStart_toStartOf="@+id/appCompatImageView" />
+                    app:layout_constraintStart_toStartOf="@+id/appCompatImageView"
+                    app:strokeColor="@color/colorPrimary" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/materialButton2"
@@ -194,20 +198,20 @@
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/button2"
+                    style="@style/DetailBagItButtonStyle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginLeft="24dp"
+                    android:padding="12dp"
+                    android:text="Bag It"
+                    android:textAllCaps="false"
+                    app:icon="@drawable/ic_add_shopping_cart_black_24dp"
+                    app:iconGravity="textStart"
                     app:layout_constraintBottom_toBottomOf="@+id/materialButton3"
                     app:layout_constraintEnd_toEndOf="@+id/textView11"
                     app:layout_constraintStart_toEndOf="@+id/materialButton3"
-                    app:layout_constraintTop_toTopOf="@+id/materialButton3"
-                    android:text="Bag It"
-                    android:padding="8dp"
-                    app:iconGravity="textStart"
-                    app:icon="@drawable/ic_add_shopping_cart_black_24dp"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginLeft="24dp"                    app:cornerRadius="18dp"
-                    android:textAllCaps="false"
-                    />
+                    app:layout_constraintTop_toTopOf="@+id/materialButton3" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
