--- a/app/src/main/res/layout/dialog_addtocard.xml
+++ b/app/src/main/res/layout/dialog_addtocard.xml
@@ -46,7 +46,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="0"
+                    android:text="01"
                     android:textColor="@color/colorItemQty"
                     android:textSize="24dp"
 
@@ -62,7 +62,7 @@
             </LinearLayout>
 
             <com.google.android.material.button.MaterialButton
-                style="@style/BagIt"
+                style="@style/DialogBagItButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
