--- a/app/src/main/res/layout/item_product_list.xml
+++ b/app/src/main/res/layout/item_product_list.xml
@@ -21,7 +21,8 @@
             android:id="@+id/rvBgCard"
             android:layout_width="match_parent"
             android:layout_height="308dp"
-            android:background="@color/colorItemCard">
+            android:background="@color/colorItemCard"
+            >
 
             <RelativeLayout
                 android:id="@+id/rvHeader"
@@ -37,7 +38,9 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_centerInParent="true"
-                app:srcCompat="@drawable/papaya" />
+                app:srcCompat="@drawable/papaya"
+
+                />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnAddToCard"
@@ -55,48 +58,57 @@
                     />
 
             </RelativeLayout>
+
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="TextView"
-                app:layout_constraintEnd_toEndOf="@+id/textView2"
+                android:text="Fresh Fruit"
+                app:layout_constraintEnd_toEndOf="@+id/tv_ShopName"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/textView2"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                app:layout_constraintStart_toStartOf="@+id/tv_ShopName"
+                app:layout_constraintTop_toBottomOf="@+id/tv_ShopName" />
 
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="TextView"
-                app:layout_constraintBottom_toBottomOf="@+id/textView5"
+                android:gravity="right"
+                android:text="View Prices"
+                android:textSize="10sp"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_Price"
                 app:layout_constraintEnd_toEndOf="@+id/textView3"
-                app:layout_constraintStart_toEndOf="@+id/textView5"
-                app:layout_constraintTop_toTopOf="@+id/textView5" />
+                app:layout_constraintStart_toEndOf="@+id/tv_Price"
+                app:layout_constraintTop_toTopOf="@+id/tv_Price" />
 
             <TextView
-                android:id="@+id/textView5"
-                android:layout_width="0dp"
+                android:id="@+id/tv_Price"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="TextView"
+                android:autoSizeTextType="uniform"
+                android:maxLines="1"
+                android:text="$2000"
+                android:textSize="16sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/textView4"
                 app:layout_constraintStart_toStartOf="@+id/textView3"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
+                app:layout_constraintTop_toBottomOf="@+id/textView3"
+                />
 
             <TextView
-                android:id="@+id/tv_productName"
+                android:id="@+id/tv_5"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:text="Par Quantity"
+                android:textSize="10sp"
                 app:layout_constraintEnd_toEndOf="@+id/textView4"
-                app:layout_constraintStart_toStartOf="@+id/textView5"
-                app:layout_constraintTop_toBottomOf="@+id/textView5" />
+                app:layout_constraintStart_toStartOf="@+id/tv_Price"
+                app:layout_constraintTop_toBottomOf="@+id/tv_Price" />
 
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tv_ProductName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -104,21 +116,23 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:text="TextView"
+                android:text="KiWi"
+                android:textSize="16sp"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/rvHeader" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/tv_ShopName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="TextView"
-                app:layout_constraintEnd_toEndOf="@+id/textView"
+                android:text="City Mart"
+                app:layout_constraintEnd_toEndOf="@+id/tv_ProductName"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/textView"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
+                app:layout_constraintStart_toStartOf="@+id/tv_ProductName"
+                app:layout_constraintTop_toBottomOf="@+id/tv_ProductName" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
