--- a/app/src/main/res/layout/item_slider_image.xml
+++ b/app/src/main/res/layout/item_slider_image.xml
@@ -11,6 +11,8 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:scaleType="centerCrop"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+
+            />
 
 </RelativeLayout>
